refactor component data & class names

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="app">
-      <navbar></navbar>
+      <nav-bar></nav-bar>
     </div>
     <!-- How we work
   Blog
