add better nav menu

--- a/index.html
+++ b/index.html
@@ -15,20 +15,24 @@
   <body>
     <div id="app">
       <nav-bar></nav-bar>
+      <main>
+        <img
+          class="family-img"
+          src="./src/images/image-intro-mobile.jpg"
+          alt="Family image"
+        />
+        <section class="intro">
+          <h2 class="intro__title">Humanizing your insurance.</h2>
+          <p class="intro__description">
+            Get your life insurance coverage easier and faster. We blend our
+            expertise and technology to help you find the plan that’s right for
+            you. Ensure you and your loved ones are protected.
+          </p>
+          <button class="btn intro__btn" type="button">View plans</button>
+        </section>
+      </main>
     </div>
-    <!-- How we work
-  Blog
-  Account
-  View plans
-
-  Humanizing your insurance.
-
-  Get your life insurance coverage easier and faster. We blend our expertise 
-  and technology to help you find the plan that’s right for you. Ensure you 
-  and your loved ones are protected.
-
-  View plans
-
+    <!-- 
   We’re different
 
   Snappy Process
