add "we're different" content

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
           <img
             class="img-container__family-img"
             src="./src/images/image-intro-mobile.jpg"
-            alt="Family image"
+            alt="Family photo"
           />
         </div>
 
         <section class="intro">
           <div class="intro__container">
             <div class="intro__line"></div>
-            <h2 class="intro__title">
+            <h2 class="intro__title heading">
               Humanizing
               <span class="intro__title-break">your insurance.</span>
             </h2>
@@ -39,25 +39,52 @@
             <button class="btn intro__btn" type="button">View plans</button>
           </div>
         </section>
+
+        <section class="middle">
+          <h2 class="middle__title heading">We’re different</h2>
+          <div class="middle__card-container">
+            <div class="middle__card">
+              <img
+                class="middle__card-icon"
+                src="./src/images/icon-snappy-process.svg"
+                alt="Snappy process icon"
+              />
+              <h3 class="middle__card-title heading">Snappy Process</h3>
+              <p class="middle__card-description">
+                Our application process can be completed in minutes, not hours.
+                Don’t get stuck filling in tedious forms.
+              </p>
+            </div>
+            <div class="middle__card">
+              <img
+                class="middle__card-icon"
+                src="./src/images/icon-affordable-prices.svg"
+                alt="Snappy process icon"
+              />
+              <h3 class="middle__card-title heading">Affordable Prices</h3>
+              <p class="middle__card-description">
+                We don’t want you worrying about high monthly costs. Our prices
+                may be low, but we still offer the best coverage possible.
+              </p>
+            </div>
+
+            <div class="middle__card">
+              <img
+                class="middle__card-icon"
+                src="./src/images/icon-people-first.svg"
+                alt="Snappy process icon"
+              />
+              <h3 class="middle__card-title heading">People First</h3>
+              <p class="middle__card-description">
+                Our plans aren’t full of conditions and clauses to prevent
+                payouts. We make sure you’re covered when you need it.
+              </p>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
     <!-- 
-  We’re different
-
-  Snappy Process
-
-  Our application process can be completed in minutes, not hours. Don’t get 
-  stuck filling in tedious forms.
-
-  Affordable Prices
-
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
-  but we still offer the best coverage possible.
-
-  People First
-
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
-  sure you’re covered when you need it.
 
   Find out more about how we work
 
