add section three
- rename section classes
- rename intro.scss to section-intro.scss
-rename card.scss to section-two.scss
- add default btn class
- add default margin and paddings

--- a/index.html
+++ b/index.html
@@ -40,56 +40,57 @@
           </div>
         </section>
 
-        <section class="middle">
-          <h2 class="middle__title heading">We’re different</h2>
-          <div class="middle__card-container">
-            <div class="middle__card">
+        <section class="s2">
+          <h2 class="s2__title heading">We’re different</h2>
+          <div class="s2__card-container">
+            <div class="s2__card">
               <img
-                class="middle__card-icon"
+                class="s2__card-icon"
                 src="./src/images/icon-snappy-process.svg"
                 alt="Snappy process icon"
               />
-              <h3 class="middle__card-title heading">Snappy Process</h3>
-              <p class="middle__card-description">
+              <h3 class="s2__card-title heading">Snappy Process</h3>
+              <p class="s2__card-description">
                 Our application process can be completed in minutes, not hours.
                 Don’t get stuck filling in tedious forms.
               </p>
             </div>
-            <div class="middle__card">
+            <div class="s2__card">
               <img
-                class="middle__card-icon"
+                class="s2__card-icon"
                 src="./src/images/icon-affordable-prices.svg"
                 alt="Snappy process icon"
               />
-              <h3 class="middle__card-title heading">Affordable Prices</h3>
-              <p class="middle__card-description">
+              <h3 class="s2__card-title heading">Affordable Prices</h3>
+              <p class="s2__card-description">
                 We don’t want you worrying about high monthly costs. Our prices
                 may be low, but we still offer the best coverage possible.
               </p>
             </div>
-
-            <div class="middle__card">
+            <div class="s2__card">
               <img
-                class="middle__card-icon"
+                class="s2__card-icon"
                 src="./src/images/icon-people-first.svg"
                 alt="Snappy process icon"
               />
-              <h3 class="middle__card-title heading">People First</h3>
-              <p class="middle__card-description">
+              <h3 class="s2__card-title heading">People First</h3>
+              <p class="s2__card-description">
                 Our plans aren’t full of conditions and clauses to prevent
                 payouts. We make sure you’re covered when you need it.
               </p>
             </div>
           </div>
         </section>
+
+        <section class="s3">
+          <div class="s3__content-container">
+            <h2 class="s3__title heading">Find out more about how we work</h2>
+            <button class="s3__btn btn">How we work</button>
+          </div>
+        </section>
       </main>
     </div>
     <!-- 
-
-  Find out more about how we work
-
-  How we work
-
   Our company
 
   How we work
