--- a/index.html
+++ b/index.html
@@ -89,34 +89,66 @@
           </div>
         </section>
       </main>
+      <footer>
+        <div class="footer-top">
+          <img
+            src="./src/images/logo.svg"
+            alt="Insure Logo"
+            class="footer-top__logo"
+          />
+          <div class="footer-top__icon-container">
+            <img
+              src="./src/images/icon-facebook.svg"
+              alt="Facebook icon"
+              class="footer-top__icon"
+            />
+            <img
+              src="./src/images/icon-twitter.svg"
+              alt="Twitter icon"
+              class="footer-top__icon"
+            />
+            <img
+              src="./src/images/icon-pinterest.svg"
+              alt="Ointerest icon"
+              class="footer-top__icon"
+            />
+            <img
+              src="./src/images/icon-instagram.svg"
+              alt="Instagram icon"
+              class="footer-top__icon"
+            />
+          </div>
+        </div>
+        <div class="footer-bot">
+          <div class="footer-bot__section">
+            <p class="footer-bot__section-title">Our company</p>
+            <a href="#" class="footer-bot__link">How we work</a>
+            <a href="#" class="footer-bot__link">Why Insure?</a>
+            <a href="#" class="footer-bot__link">View plans</a>
+            <a href="#" class="footer-bot__link">Reviews</a>
+          </div>
+          <div class="footer-bot__section">
+            <p class="footer-bot__section-title">Help me</p>
+            <a href="#" class="footer-bot__link">FAQ</a>
+            <a href="#" class="footer-bot__link">Terms of use</a>
+            <a href="#" class="footer-bot__link">Privacy policy</a>
+            <a href="#" class="footer-bot__link">Cookies</a>
+          </div>
+          <div class="footer-bot__section">
+            <p class="footer-bot__section-title">Contact</p>
+            <a href="#" class="footer-bot__link">Sales</a>
+            <a href="#" class="footer-bot__link">Support</a>
+            <a href="#" class="footer-bot__link">Live chat</a>
+          </div>
+          <div class="footer-bot__section">
+            <p class="footer-bot__section-title">Others</p>
+            <a href="#" class="footer-bot__link">Careers</a>
+            <a href="#" class="footer-bot__link">Press</a>
+            <a href="#" class="footer-bot__link">Licenses</a>
+          </div>
+        </div>
+      </footer>
     </div>
-    <!-- 
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
-
-  Help me
-
-  FAQ
-  Terms of use
-  Privacy policy
-  Cookies
-
-  Contact
-
-  Sales
-  Support
-  Live chat
-
-  Others
-
-  Careers
-  Press
-  Licenses -->
-
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
