--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Description" content="Insure Landing Page" />
     <link
       rel="icon"
       type="image/png"
@@ -147,13 +148,15 @@
             <a href="#" class="footer-bot__link">Licenses</a>
           </div>
         </div>
+        <div class="attribution">
+          CODED BY
+          <a
+            href="https://github.com/awexli/insure-landing-page"
+            rel="noopener noreferrer"
+            >Alex Li</a
+          >
+        </div>
       </footer>
-    </div>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
     <script src="main.js"></script>
