--- a/index.html
+++ b/index.html
@@ -16,147 +16,8 @@
   <body>
     <div id="app">
       <nav-bar></nav-bar>
-      <main>
-        <div class="img-container">
-          <img
-            class="img-container__family-img"
-            src="./src/images/image-intro-mobile.jpg"
-            alt="Family photo"
-          />
-        </div>
-
-        <section class="intro">
-          <div class="intro__container">
-            <div class="intro__line"></div>
-            <h2 class="intro__title heading">
-              Humanizing
-              <span class="intro__title-break">your insurance.</span>
-            </h2>
-            <p class="intro__description">
-              Get your life insurance coverage easier and faster. We blend our
-              expertise and technology to help you find the plan that’s right
-              for you. Ensure you and your loved ones are protected.
-            </p>
-            <button class="btn intro__btn" type="button">View plans</button>
-          </div>
-        </section>
-
-        <section class="s2">
-          <h2 class="s2__title heading">We’re different</h2>
-          <div class="s2__card-container">
-            <div class="s2__card">
-              <img
-                class="s2__card-icon"
-                src="./src/images/icon-snappy-process.svg"
-                alt="Snappy process icon"
-              />
-              <h3 class="s2__card-title heading">Snappy Process</h3>
-              <p class="s2__card-description">
-                Our application process can be completed in minutes, not hours.
-                Don’t get stuck filling in tedious forms.
-              </p>
-            </div>
-            <div class="s2__card">
-              <img
-                class="s2__card-icon"
-                src="./src/images/icon-affordable-prices.svg"
-                alt="Snappy process icon"
-              />
-              <h3 class="s2__card-title heading">Affordable Prices</h3>
-              <p class="s2__card-description">
-                We don’t want you worrying about high monthly costs. Our prices
-                may be low, but we still offer the best coverage possible.
-              </p>
-            </div>
-            <div class="s2__card">
-              <img
-                class="s2__card-icon"
-                src="./src/images/icon-people-first.svg"
-                alt="Snappy process icon"
-              />
-              <h3 class="s2__card-title heading">People First</h3>
-              <p class="s2__card-description">
-                Our plans aren’t full of conditions and clauses to prevent
-                payouts. We make sure you’re covered when you need it.
-              </p>
-            </div>
-          </div>
-        </section>
-
-        <section class="s3">
-          <div class="s3__content-container">
-            <h2 class="s3__title heading">Find out more about how we work</h2>
-            <button class="s3__btn btn">How we work</button>
-          </div>
-        </section>
-      </main>
-      <footer>
-        <div class="footer-top">
-          <img
-            src="./src/images/logo.svg"
-            alt="Insure Logo"
-            class="footer-top__logo"
-          />
-          <div class="footer-top__icon-container">
-            <img
-              src="./src/images/icon-facebook.svg"
-              alt="Facebook icon"
-              class="footer-top__icon"
-            />
-            <img
-              src="./src/images/icon-twitter.svg"
-              alt="Twitter icon"
-              class="footer-top__icon"
-            />
-            <img
-              src="./src/images/icon-pinterest.svg"
-              alt="Ointerest icon"
-              class="footer-top__icon"
-            />
-            <img
-              src="./src/images/icon-instagram.svg"
-              alt="Instagram icon"
-              class="footer-top__icon"
-            />
-          </div>
-        </div>
-        <div class="footer-bot">
-          <div class="footer-bot__section">
-            <p class="footer-bot__section-title">Our company</p>
-            <a href="#" class="footer-bot__link">How we work</a>
-            <a href="#" class="footer-bot__link">Why Insure?</a>
-            <a href="#" class="footer-bot__link">View plans</a>
-            <a href="#" class="footer-bot__link">Reviews</a>
-          </div>
-          <div class="footer-bot__section">
-            <p class="footer-bot__section-title">Help me</p>
-            <a href="#" class="footer-bot__link">FAQ</a>
-            <a href="#" class="footer-bot__link">Terms of use</a>
-            <a href="#" class="footer-bot__link">Privacy policy</a>
-            <a href="#" class="footer-bot__link">Cookies</a>
-          </div>
-          <div class="footer-bot__section">
-            <p class="footer-bot__section-title">Contact</p>
-            <a href="#" class="footer-bot__link">Sales</a>
-            <a href="#" class="footer-bot__link">Support</a>
-            <a href="#" class="footer-bot__link">Live chat</a>
-          </div>
-          <div class="footer-bot__section">
-            <p class="footer-bot__section-title">Others</p>
-            <a href="#" class="footer-bot__link">Careers</a>
-            <a href="#" class="footer-bot__link">Press</a>
-            <a href="#" class="footer-bot__link">Licenses</a>
-          </div>
-        </div>
-        <div class="attribution">
-          CODED BY
-          <a
-            href="https://github.com/awexli/insure-landing-page"
-            rel="noopener noreferrer"
-            >Alex Li</a
-          >
-        </div>
-      </footer>
+      <main-content></main-content>
+      <footer-content></footer-content>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
     <script src="main.js"></script>
