attemp to fix nav-menu scrolling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="./images/favicon-32x32.png"
     />
     <title>Frontend Mentor | Insure landing page</title>
+    <link rel="stylesheet" href="./src/normalize.css" />
     <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
